--- a/news_crawler/scrapy.cfg
+++ b/news_crawler/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = daily_news_scraper.settings
+default = news_crawler.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = daily_news_scraper
+project = news_crawler
